<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryLightColor"
    tools:context=".activities.CalculatorActivity">
    <TextView
        android:id="@+id/calculator_tv_expression"
        android:layout_weight="20"
        style="@style/CalculatorTextDisplayStyle" />
    <TextView
        android:id="@+id/calculator_tv_answer"
        android:layout_weight="10"
        style="@style/CalculatorTextDisplayStyle" />
    <GridLayout
        android:id="@+id/calculator_grid_layout"
        android:layout_weight="70"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="6">
        <Button
            android:id="@+id/calculator_btn_clr"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/clr" />
        <Button
            android:id="@+id/calculator_btn_opening_bracket"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/opening_bracket" />
        <Button
            android:id="@+id/calculator_btn_closing_bracket"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/closing_bracket" />
        <Button
            android:id="@+id/calculator_btn_divide"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/divide" />
        <Button
            android:id="@+id/calculator_btn_seven"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/digit_7" />
        <Button
            android:id="@+id/calculator_btn_eight"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/digit_8" />
        <Button
            android:id="@+id/calculator_btn_nine"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/digit_9" />
        <Button
            android:id="@+id/calculator_btn_multiply"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/multiply" />
        <Button
            android:id="@+id/calculator_btn_four"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/digit_4" />
        <Button
            android:id="@+id/calculator_btn_five"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/digit_5" />
        <Button
            android:id="@+id/calculator_btn_six"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/digit_6" />
        <Button
            android:id="@+id/calculator_btn_subtraction"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/subtraction" />
        <Button
            android:id="@+id/calculator_btn_one"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/digit_1" />
        <Button
            android:id="@+id/calculator_btn_two"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/digit_2" />
        <Button
            android:id="@+id/calculator_btn_three"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/digit_3" />
        <Button
            android:id="@+id/calculator_btn_add"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/add" />
        <Button
            android:id="@+id/calculator_btn_dot"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/dot" />
        <Button
            android:id="@+id/calculator_btn_zero"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/digit_0" />
        <Button
            android:id="@+id/calculator_btn_del"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="2"
            android:layout_row="4"
            android:text="@string/del" />
        <Button
            android:id="@+id/calculator_btn_equals"
            style="@style/CalculatorButtonPadStyle"
            android:layout_column="3"
            android:layout_row="4"
            android:text="@string/equals" />
    </GridLayout>
</LinearLayout>